[package]
name = "sensor-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
nvml-wrapper = "0.9.0"
nvml-wrapper-sys = "0.7.0"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

